try experimental nesting in netlifycms

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -10,6 +10,7 @@ collections:
     folder: 'docs/'
     create: true
     slug: '{{slug}}'
+    nested: { depth: 10 }
     editor:
       preview: false
     fields:
