.travis.yml: only build on master

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: ruby
 # only run CI-builds on master branch
 branches:
   only:
-    - dev
+    - master
 rvm:
   - 2.3.0
 script: ./script/cibuild
