--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,8 @@ permalink: pretty
 exclude: ["node_modules/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "package.json", "package-lock.json",  "script/", "LICENSE.txt", "lib/", "bin/", "README.md", "Rakefile"]
 
 # Set a path/url to a logo that will be displayed instead of the title
-logo: "/assets/images/horizontal_lockup_white.png"
+#logo: "/assets/images/horizontal_lockup_white.png"
+logo: "https://terminusdb.com/img/logos/logo.svg"
 
 # Enable or disable the site search
 search_enabled: true
