--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,7 @@ aux_links:
     - "https://terminusdb.com"
 
 # Footer content appears at the bottom of every page's main content
-footer_content: "Copyright &copy; 2020 - TerminusDB |  Distributed by an <a href=\"https://github.com/terminusdb/terminusdb-server/blob/master/LICENSE\">GPL-3.0 license.</a>"
+footer_content: "Copyright &copy; 2020 - TerminusDB |  Distributed by an <a href=\"https://github.com/terminusdb/terminusdb-server/blob/master/LICENSE\">Apache 2.0 license.</a>"
 
 # Color scheme currently only supports "dark" or nil (default)
 color_scheme: nil
