--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: TerminusDB Documentation
 description: Documentation for TerminusDB
-baseurl: "/docs" # the subpath of your site, e.g. /blog
+baseurl: "/docs/terminushub" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #theme: just-the-docs
 
